--- a/ui/main.reel/main.html
+++ b/ui/main.reel/main.html
@@ -37,6 +37,16 @@
                 }
             ]
         },
+        "checkbox": {
+            "prototype": "digit/ui/checkbox.reel",
+            "properties": {
+                "element": {"#": "checkbox"},
+                "checked": true
+            },
+            "bindings": {
+                "checked": {"<-": "@owner.task.completed"}
+            }
+        },
         "list": {
             "prototype": "digit/ui/list.reel",
             "properties": {
@@ -46,6 +56,14 @@
         },
         "rangeController": {
             "prototype": "montage/core/range-controller"
+        },
+        "textField": {
+            "prototype": "digit/ui/text-field.reel",
+            "properties": {
+                "element": {"#": "textField"},
+                "placeholderValue": "@owner.task.title",
+                "value": "value"
+            }
         },
         "title": {
             "prototype": "digit/ui/title.reel",
@@ -64,6 +82,8 @@
         <ul data-montage-id="list">
             <li></li>
         </ul>
+        <input type="checkbox" data-montage-id="checkbox">
+        <input data-montage-id="textField" type="text">
     </div>
 </body>
 </html>
