Update component ui/main.reel/

--- a/ui/main.reel/main.html
+++ b/ui/main.reel/main.html
@@ -23,6 +23,16 @@
                 "isHidden": true
             }
         },
+        "badge": {
+            "prototype": "digit/ui/badge.reel",
+            "properties": {
+                "element": {"#": "badge"},
+                "value": ""
+            },
+            "bindings": {
+                "value": {"<-": "@rangeController.organizedContent.filter{!completed}.length"}
+            }
+        },
         "button": {
             "prototype": "digit/ui/button.reel",
             "properties": {
@@ -57,6 +67,15 @@
         "rangeController": {
             "prototype": "montage/core/range-controller"
         },
+        "task1": {
+            "prototype": "ui/task.reel",
+            "properties": {
+                "element": {"#": "task1"}
+            },
+            "bindings": {
+                "task": {"<-": "@list:iteration.object"}
+            }
+        },
         "textField": {
             "prototype": "digit/ui/text-field.reel",
             "properties": {
@@ -79,8 +98,9 @@
     <div data-montage-id="main" data-montage-skin="light" class="Main">
         <h1 data-montage-id="title"></h1>
         <button data-montage-id="button"></button>
+        <output data-montage-id="badge"></output>
         <ul data-montage-id="list">
-            <li></li>
+            <li data-montage-id="task1"></li>
         </ul>
         <input type="checkbox" data-montage-id="checkbox">
         <input data-montage-id="textField" type="text">
